--- a/lab1/Readme
+++ b/lab1/Readme
@@ -1,3 +1,4 @@
 to see the result just execute the exe file
 to see the code use the .cpp file
 or to work on the project as such use the project file
+Video Demonstration : https://www.youtube.com/watch?v=w3V1tKMuPyM&feature=youtu.be
